# dynamic-linking

./: Cargo.toml  README.md  run.sh
exports/: Cargo.toml
exports/src/: lib.rs
mod_a/: Cargo.toml
mod_a/src/: lib.rs
mod_b/: Cargo.toml
mod_b/src/: lib.rs
mod_c/: mod_c.c
src/: main.rs
