[package]
name = "exports"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["dylib"]

[dependencies]
tokio = { git = "https://github.com/bearcove/tokio", branch = "rubicon-3.x-bis", features = [
  "process",
  "rt",
  "rt-multi-thread",
  "macros",
  "sync",
] }
rubicon = { version = "3.4.9", features = ["export-globals"] }
dynify = { version = "0.1.2", features = ["smallvec"] }
smallvec = "1.15.1"
async-ffi = { version = "0.5.0", features = ["macros"] }
# libc = "0.2.180"
